fixed fab spacing in image detail view

--- a/hosting/src/app/pages/images/image-details/details.component.scss
+++ b/hosting/src/app/pages/images/image-details/details.component.scss
@@ -31,8 +31,8 @@ img {
   align-items: center;
   justify-content: flex-end;
 
-  a {
-    margin: 8px;
+  a, button {
+    margin: 4px;
   }
 }
 
